[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydbsec"
version = "0.3.0"
description = "Python wrapper for DB Securities (DB증권) OpenAPI — Stock trading, balance, quotes, charts for Korean & US markets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "STOA Company" },
]
keywords = [
    "db-securities", "dbsec", "DB증권",
    "trading", "stock", "finance", "quant",
    "korea", "korean-stock", "us-stock",
    "api", "api-wrapper", "openapi",
    "algorithmic-trading", "auto-trading",
    "pykis", "pykrx",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]
ws = [
    "websockets>=12.0",
]
mcp = [
    "mcp[cli]>=1.0.0",
]
docs = [
    "mkdocs-material>=9.5",
]

[project.scripts]
pydbsec = "pydbsec.cli:main"
pydbsec-mcp = "pydbsec.mcp.server:run_server"

[project.urls]
Homepage = "https://github.com/STOA-company/pydbsec"
Documentation = "https://stoa-company.github.io/pydbsec"
Repository = "https://github.com/STOA-company/pydbsec"
Issues = "https://github.com/STOA-company/pydbsec/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pydbsec"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
